# cmake_git_crashcourse

./: .gitigore  CMakeLists.txt  LICENSE  test_example_a.c  test_example_b.cpp
libs/: CMakeLists.txt
libs/example_a/: CMakeLists.txt  cube.h  square.h
libs/example_a/details/: cube.c  multiplication.c  multiplication.h  square.c
libs/example_b/: CMakeLists.txt  area.h
libs/example_b/details/: area.cpp
